--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.19",
     "vue": "^3.2.13",
