--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.19",
+    "normalize.css": "^8.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
