--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.19",
